--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,7 @@ footer {
 /* Change the background colors below */
 
 @media (min-width: 768px) {
+  
   header {
     background-color: #a6a6a6;
   }
@@ -73,17 +74,22 @@ footer {
 
   #column-3 {
     background-color:  #0099e6;
+    width:100%;
   }
 
   footer {
     background-color: #a6a6a6;
   }
-  
+
+  .col-3 {
+    width: 50%;
+    }
 }
 
 
 /*---------- Desktops ----------*/
 @media (min-width: 1200px) {
+  
   header {
     background-color: #333333;
   }
@@ -98,10 +104,14 @@ footer {
 
   #column-3 {
     background-color: 	 #000066;
+    width: 33.3%;
   }
 
   footer {
     background-color: #333333;
   }
-   
+
+  .col-3 {
+    width: 33.3%;
+  }
 }
